# open-rosalind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  gpt1.md  gpt2.md  id.txt  migration_notes.md  mvp2-benchmark.md  mvp2-rec.md  mvp3.md  open-rosalind.md  pyproject.toml
.claude/: settings.local.json
benchmark/: BENCHMARK.md  BIOBENCH_V03_DESIGN.md  BIOBENCH_V1_DESIGN.md  R6_FIXES.md  biobench_v0.jsonl  biobench_v03.jsonl  biobench_v1.jsonl  build_full91.py  build_holdout30.py  clustered_stats.py  clustered_stats_holdout.md  clustered_stats_holdout_r6.md  clustered_stats_holdout_r61.md  clustered_stats_t02.md  clustered_stats_t07.md  floor_and_loo.py  floor_stats.md  full91.json  history.jsonl  history_v03.jsonl  history_v1.jsonl  holdout30.json  leave_one_out.md  paired_results.json  paired_results_holdout.json  paired_results_t02.json  paired_summary.md  paired_summary_holdout.md  paired_summary_t02.md  pilot10.json  pilot_results.json  pilot_summary.md  results.json  results.md  results_v03.json  results_v03.md  results_v1.json  results_v1.md  run_biobench.py  run_biobench_v03.py  (+5 more)
configs/: default.yaml
develop/:  mvp4.md  gpt3.md  gpt4.md  main-page.md  mvp2-rec2.md  mvp2.md  mvp3-1.md  mvp3.2.md
docs/: DEMOS.md  DESIGN_PRINCIPLES.md  DOCKER.md  EXECUTION_PROTOCOL.md  MVP3_2_DESIGN.md  MVP3_HARNESS.md  SKILLS_V2_DESIGN.md  SKILL_SPEC.md
examples/: smoke_test.py
open_rosalind/: __init__.py  cli.py  config.py  server.py  session.py  storage.py
paper/: R6_SUMMARY.md  paper.aux  paper.md  paper.out  paper.tex  (+1 more)
(+553 files in other folders)
